Wed Oct  03 06:13:14 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Fixed some really unwanted behaviour in the Ewl_Box code.
	  When some of the children with EWL_FILL_POLICY_FILL had a custom
	  size set, it would calculate the size of the other children with
	  that fill policy wrong.

Tue Oct  02 07:13:20 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Made the font cache and image cache spinner in ewl_config
	  actually display kilobytes.

Tue Oct  02 06:25:20 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Added a confirm dialog to ewl_config, that pops up when you exit
	  and have unsaved changes.

Tue Oct  02 05:22:30 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Fixed segv in __ewl_widget_destroy.
	* Fixed memleaks in the ewl_test program.
	* Made ewl_config exit nicely.
	* Spiffed up the notebook tab button bits.db's.

Tue Oct  02 03:45:39 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Added functions to change the position and alignment of the tabs in
	  a Ewl_Notebook.
	* Made ewl_main_quit only exit the ecore event loop.
	  We don't destroy all widgets or call exit() anymore.

Sun Sep  30 03:38:44 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Added a padd structure to the Ewl_Object.
	* Made the Ewl_Box make use of the new padding in the Ewl_Object, and
	  get rid of the old x_padding/y_padding.
	* If the child had a minimum height that was larger then the Ewl_Box it
	  self, it would resize it to make the children fit. Not any more.
	* Made the Ewl_Separator set its maximum size to the ebits object
	  when realizing it.
	* Same goes for the Ewl_Spinner & Ewl_Entry.
	* Made Ewl_Image work.
	* When realizing a Ewl_CheckButton with a checked state, it didn't
	  set the Check bit to clicked, fixed.
	* Only check the debug enable checkbutton if its enabled.
	* Made the Ewl_Image call evas events on mouse down, mouse up and
	  mouse move when the image is a ebits.
